--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ h1 {
 1. A border shortcut that names the width, type of border, and color of the border.
 3. Padding between the image and the border.
 4. A box shadow around the image border with zero offset and depth of 30px in gray.*/
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -39,4 +39,31 @@ img {
 1. Padding between the paragraph content and the border is set to 10 pixels.*/
 p {
     padding: 10px;
+}
+
+main {
+    max-width: 840px;
+}
+
+aside {
+    width: 840;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+p { padding: 0;}
+
+footer {
+    margin-top: 15 px;
+    border-top: 1px solid #000;
+    text-align: center;
 }
