--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ main {
 }
 
 aside {
-    width: 840;
+    width: 840px;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
@@ -63,7 +63,7 @@ aside img {
 p { padding: 0;}
 
 footer {
-    margin-top: 15 px;
+    margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
 }
