--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #1D3557;
-    --seconday-color: #457B9D;
+    --secondary-color: #457B9D;
     --accent1-color: #A8DADC;
     --accent2-color: #F1FAEE;
 
