--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -39,42 +39,45 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    padding: 20px;
+    margin: 20px;
+}
+
+.hero {
+    position: relative;
+    width: 100%;
+    height: auto;
 }
 
 .hero img {
-    width: 100%;
+    display: block;
+    width:100%;
     height: auto;
-    position: relative;
 }
 
 .hero h1 {
     position: absolute;
-    width: 100%;
-    top: 300px;
-    left: 0px;
     text-align: center;
-    color: white;
+    width: 100%;
+    top: 100px;
+    left: 0;
     background-color: rgba(0,0,0,0.25);
-}
-
-.hero article p {
-    position: absolute;
-    margin: 25px;
-    padding: 25px;
-    text-align: left;
-    top: 400px;
-    left:0;
     color: white;
-    background-color: rgba(0,0,0,0.25);
-    height: 25%;
 }
 
 .hero article img {
     float: right;
-    width: 50%;
+    margin: 20px;
+    width: 33%;
     height: auto;
-    margin: 25px;
-    padding: 25px;
-    top: -400px;
+}
+
+.hero article p {
+    position: absolute;
+    text-align: left;
+    margin: 20px;
+    padding: 20px;
+    top: 200px;
+    background-color: rgba(0,0,0,0.25);
+    color: white;
+    height:200px;
 }
