--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
+
+:root {
+    --heading-font: 'Rock Salt', 'Bradley Hand', cursive;
+    --paragraph-font: Roboto, Arial, Helvetica, sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--paragraph-font);
+}
+
+body {
+    font-size: 16px;
 }
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
+}
+
+main {
+    grid-column: 2 / 3;
+    margin: 1rem;
 }
 
 h1 {
     color: steelblue;
+    border-bottom: 1px solid;
+    margin: 0 auto;
+    padding: .5rem;
 }
 
 main img {
@@ -24,22 +50,22 @@ main img {
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
+    margin: 1rem;
     box-shadow: 0 0 30px gray;
     float: right;
 }
 
 p {
-    padding: 10px;
-}
-
-main {
-    max-width: 750px;
+    padding: 0 auto;
+    margin: .5rem;
+    text-align: justify;
 }
 
 aside {
-    width: 20em;
-    text-align: center;
+    width: 20rem;
     position: relative;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
 aside h2 {
@@ -53,12 +79,18 @@ aside img {
     height: auto;
 }
 
-p { padding: 0;}
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
 
 footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: center;
+    border-top: 1px solid;
+}
+
+ul {
+    padding: 20px;
+    text-align: left;
 }
 
 /*Class Selectors*/
@@ -69,4 +101,9 @@ footer {
     padding: 1rem;
     background-color: #eee;
     color: #333;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
