--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -64,8 +64,8 @@ input, select, textarea {
 }
 
 input[type="checkbox"] {
-    width: 22px;
-    height: 22px;
+    width: 40px;
+    height: 20px;
     vertical-align: bottom;
 }
 
@@ -93,6 +93,7 @@ footer {
     font-size: 0.8em;
     color: #777;
     border-top: 1px solid #ccc;
+    padding: 1rem;
 }
 
 .form-item {
@@ -103,6 +104,8 @@ footer {
 .column1 {
     grid-template-columns: 3fr 1fr;
     margin: 0.5rem 0;
+    display: grid;
+    justify-self: center;
 }
 
 .column2 {
@@ -111,5 +114,5 @@ footer {
 
 .lived-legend {
     text-align: center;
-    padding: 0.5rem;
+    padding: 1rem;
 }
