--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,26 +31,26 @@ body {
 
 header img {
     grid-column: 1/2;
-    justify-items: center;
-    align-self: center;
     margin: 0 auto;
     width: 33%;
     height: auto;
 }
 
 header nav {
-    grid-column: 2/3;
+    grid-column: 2/4;
+    width: 500px;
     align-self: center;
     display: flex;
     justify-content: space-evenly;
-    align-content: center;
     padding: 20px;
     background-color: var(--accent1-color);
     text-decoration: none;
+    
 }
 
 header nav a:link, nav a:visited {
     color: var(--primary-color);
+    text-decoration: none;
 }
 
 header nav a:hover {
@@ -148,34 +148,34 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     margin: 0 auto;
-    width: 950px;
+    width: auto;
     background-color: #457B9D;
     height: auto;
+    padding: 15px 25px 25px 25px;
 }
 
 .adventure h2 {
     grid-column: 1/6;
+    grid-row: 1/2;
+    display: grid;
+    justify-items: center;
     text-align: center;
     color: white;
     margin: 0 auto;
-}
-
-.adventure section {
-    grid-column: 1/6;
+    padding: 0 0 15px 0;
 }
 
 .adventure figure {
     border: thin #c0c0c0 solid;
     display: flex;
     flex-flow: column;
-    padding: 5px;
+    padding: 0;
     max-width: 250px;
     margin: auto;
 }
 
 .adventure img {
-    max-width: 250px;
-    max-height: 150px;
+    max-height: 100px;
 }
 
 .adventure figcaption {
@@ -212,3 +212,148 @@ footer {
     padding: 5%;
     margin: 0 auto;
 }
+
+/* Contact Us */
+.our-info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
+    margin: 0 auto;
+    width: 950px;
+    height: auto;
+    background-color: var(--accent1-color);
+}
+
+.phone, .email, .address {
+    grid-row: 1/2;
+    margin: 0 auto;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+}
+
+.google-map {
+    grid-column: 1/4;
+    margin: 0 auto;
+    padding: 0 0 25px 0;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+/* Team */
+
+.team {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto;
+    padding: 0 0 25px 0;
+    background-color: #457B9D;
+    height: auto;
+}
+
+.team h2 {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    color: var(--accent2-color);
+    margin: 0 auto;
+    height: 100px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.team figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 0;
+    max-width: 250px;
+    margin: auto;
+}
+
+.team img {
+    max-width: 250px;
+    max-height: 150px;
+}
+
+.team figcaption {
+    background-color: #222;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;
+}
+
+/* Form */
+
+.form {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.form form {
+    width: 500px;
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: #0066ee;
+    display: grid;
+}
+
+.form fieldset {
+    display: grid;
+    grid-gap: .5rem;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.form legend {
+    padding: 0.5rem;
+    color: var(--primary-color);
+    font-size: 1.3em;
+}
+
+.form label {
+    text-align: right;
+    padding-right: 1rem;
+}
+
+.form input,
+.form textarea {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+
+.form button {
+    margin: 1rem;
+    background-color: #0066ee;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+    width: 200px;
+    display: grid;
+    justify-self: center;
+}
+
+.form-item {
+    display: grid;
+    align-items: center;
+}
+
+.column1 {
+    grid-template-columns: 3fr 1fr;
+    margin: 0.5rem 0;
+    display: grid;
+    justify-self: center;
+}
+
+.column2 {
+    grid-template-columns: 1fr 2fr;
+}
+
