--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -291,54 +291,38 @@ footer {
 /* Form */
 
 .form {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.form form {
-    width: 500px;
     margin: 0 auto;
-    padding: 1rem;
-    background-color: #0066ee;
+    padding: 15px 0 25px 0;
+    box-sizing: border-box;
+    width: 950px;
+    background-color: #eef8f8;
     display: grid;
 }
 
 .form fieldset {
     display: grid;
-    grid-gap: .5rem;
-    margin: 1rem;
-    padding: 1rem;
+    grid-gap: 5px;
+    justify-self: center;
+    padding: 10px;
+    width: 500px;
 }
 
 .form legend {
-    padding: 0.5rem;
+    font-size: 1.5em;
+    padding: 0 5px 0 5px;
     color: var(--primary-color);
-    font-size: 1.3em;
+    font-family: var(--heading-font);
 }
 
-.form label {
+form label {
     text-align: right;
-    padding-right: 1rem;
+    padding: 10px;
 }
 
 .form input,
+.form select,
 .form textarea {
-    padding: 0.5rem;
-    font-size: 1.1rem;
-}
-
-.form button {
-    margin: 1rem;
-    background-color: #0066ee;
-    color: #fff;
-    border: none;
-    border-radius: .5rem;
-    padding: .75rem;
-    font-size: 1.2rem;
-    width: 200px;
-    display: grid;
-    justify-self: center;
+    padding: 5px;
 }
 
 .form-item {
@@ -346,14 +330,41 @@ footer {
     align-items: center;
 }
 
-.column1 {
-    grid-template-columns: 3fr 1fr;
-    margin: 0.5rem 0;
-    display: grid;
-    justify-self: center;
+.contact {
+    grid-template-columns: 1fr 1fr;
 }
 
-.column2 {
-    grid-template-columns: 1fr 2fr;
+.questions label,
+.questions textarea {
+    text-align: left;
+    padding: 15px 10px 10px 10px;
 }
+
+.questions div{
+    text-align: left;
+    padding: 5px 10px 10px 25px;
+}
+
+.subscribe label {
+    text-align: center;
+}
+
+.send-request {
+    display: grid;
+    justify-self: center;
+    width: 200px;
+    padding: 10px;
+    margin: 20px 0 0 0;
+    background-color: var(--secondary-color);
+    color: var(--accent2-color);
+    font-family: var(--heading-font);
+}
+
+
+
+
+
+
+
+
 
